--- a/packages/mdline-formatter-html/component/App.v1.0.2.html
+++ b/packages/mdline-formatter-html/component/App.v1.0.2.html
@@ -18,7 +18,6 @@
     </div>
 </section>
 <style>
-    body {padding:0; margin:0}
     /* Based on https://github.com/CodyHouse/vertical-timeline */
     .cd-timeline *, .cd-timeline *::after, .cd-timeline *::before {
         -webkit-box-sizing: border-box;
@@ -29,14 +28,13 @@
         font-size: 1.6rem;
         font-family: "Droid Serif", serif;
         color: #7f8c97;
-        /*background-color: #e9f0f5;*/
-        background-color: #91800c82;
+        background-color: #e9f0f5;
     }
 
 
     .cd-timeline :global(a) {
         color: #acb7c0;
-        /*text-decoration: none;*/
+        text-decoration: none;
     }
 
     .cd-timeline :global(img) {
@@ -50,7 +48,7 @@
 
     .cd-timeline {
         overflow: hidden;
-        /*margin: 2em auto;*/
+        margin: 2em auto;
     }
 
     .cd-timeline__container {
@@ -73,12 +71,10 @@
     }
 
     @media only screen and (min-width: 1170px) {
-        /*
         .cd-timeline {
             margin-top: 3em;
             margin-bottom: 3em;
         }
-        */
 
         .cd-timeline__container::before {
             left: 50%;
@@ -124,8 +120,7 @@
     }
 
     .cd-timeline__img {
-        /*background: #75ce66;*/
-        background: #91800c;
+        background: #75ce66;
     }
 
     @media only screen and (min-width: 1170px) {
